# Geppetto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Roadmap.txt  build.sh  forgeops-automation.spec  geppetto-automation.spec  pyproject.toml
debug/: main.conf  plan.fops
debug/includes/: active_directory.fops  keys.fops  packages.fops  users.fops
debug/templates/: krb5.conf.tmpl  sssd.conf.tmpl
docs/: custom-plugins.md  operations-reference.md
examples/: README.md  base_plan.fops  base_plan.toml  main.conf.sample  plan.fops
examples/config/: main.conf.sample
examples/includes/: execs.fops  keys.fops  mounts.fops  packages.fops  users.fops
examples/packaging/: PKGBUILD
examples/plugins/: custom_ops.py
examples/templates/: motd.tmpl
packaging/: PKGBUILD
scripts/: build_payload.sh  build_rpm.sh  forgeops-auto  geppetto-auto
src/forgeops_automation/: __init__.py  cli.py  config.py  dsl.py  executors.py  inventory.py  runner.py  secrets.py  state.py  types.py
src/geppetto_automation/: __init__.py  cli.py  config.py  config_service.py  dsl.py  executors.py  inventory.py  runner.py  secrets.py  (+2 more)
tests/: test_authorized_key_operation.py  test_ca_cert_operation.py  test_cli_help.py  test_cli_output.py  test_config.py  test_config_service.py  test_cron_operation.py  test_dsl_parser.py  test_exec_operation.py  test_file_operation.py  test_git_pull_operation.py  test_group_operation.py  test_inventory.py  test_mount_operations.py  test_package_operation.py  test_plugin_loader.py  test_remote_operations.py  test_runner.py  test_secrets.py  test_service_operation.py  test_state_store.py  test_sysctl_operation.py  test_timezone_operation.py  test_user_operation.py  test_yum_repo_operation.py
(+35 files in other folders)
