[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geppetto-automation"
version = "0.0.6"
description = "Lightweight systems automation toolkit for Geppetto"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Dave Seff", email = "dave@seff.com.au"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "Jinja2>=2.11",
    "boto3>=1.34",
    'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
geppetto-auto = "geppetto_automation.cli:main"
